# OpenSuperWhisper

./: .cursorrules  .gitignore  .gitmodules  Bridge.h  Gemfile  LICENSE  Package.resolved  Readme.md  default.profraw  make_release.sh  notarize_app.sh  run.sh
.github/: dependabot.yml
.github/workflows/: build.yml
OpenSuperWhisper/: AppIcon.icns  AudioRecorder.swift  ContentView.swift  FileDropHandler.swift  OpenSuperWhisper-Info.plist  OpenSuperWhisper.entitlements  OpenSuperWhisperApp.swift  PermissionsManager.swift  Settings.swift  ShortcutManager.swift  TranscriptionService.swift  WhisperContext.swift  WhisperModelManager.swift
OpenSuperWhisper.xcodeproj/: project.pbxproj
OpenSuperWhisper/Indicator/: IndicatorWindow.swift  IndicatorWindowManager.swift
OpenSuperWhisper/Models/: Recording.swift
OpenSuperWhisper/Onboarding/: OnboardingView.swift
OpenSuperWhisper/Utils/: AppPreferences.swift  AutocorrectWrapper.swift  ClipboardUtil.swift  FileUtil.swift  FocusUtils.swift  LanguageUtil.swift  PermissionUtils.swift
OpenSuperWhisper/Whis/: Whis.swift  WhisperAhead.swift  WhisperAheads.swift  WhisperAlignmentHeadsPreset.swift  WhisperContextParams.swift  WhisperFullParams.swift  WhisperGrammarElement.swift  WhisperGrammarElementType.swift  WhisperModelLoader.swift  (+3 more)
OpenSuperWhisperTests/: OpenSuperWhisperTests.swift
OpenSuperWhisperUITests/: OpenSuperWhisperUITests.swift  OpenSuperWhisperUITestsLaunchTests.swift
docs/: build_whisper.md  release_build.md
fastlane/: .env.example  Appfile  Fastfile  README.md
libwhisper/: CMakeLists.txt
(+4 files in other folders)
